--- a/Student/iAttend.Student/iAttend.Student/iAttend.Student/Views/SubjectStudentsPage.xaml
+++ b/Student/iAttend.Student/iAttend.Student/iAttend.Student/Views/SubjectStudentsPage.xaml
@@ -28,6 +28,15 @@
                 Text="{x:Static fa:FontAwesomeHelper.Slidersh}"
                 TextColor="White"
                 WidthRequest="50" />
+
+            <Button
+                BackgroundColor="Transparent"
+                Command="{Binding ReportFilterCommand}"
+                HorizontalOptions="End"
+                Style="{x:StaticResource fa-solid}"
+                Text="{x:Static fa:FontAwesomeHelper.Print}"
+                TextColor="White"
+                WidthRequest="50" />
             <!--<Label
                 Margin="20,10"
                 FontSize="Medium"
@@ -215,7 +224,9 @@
                                 Margin="-10"
                                 Aspect="AspectFill"
                                 DownsampleHeight="140"
+                                ErrorPlaceholder="ic_trimex.png"
                                 HeightRequest="140"
+                                LoadingPlaceholder="ic_trimex.png"
                                 Source="{Binding Avatar}"
                                 Transformations="{Binding IsPresent, Converter={x:StaticResource transformationConverter}}" />
 
