--- a/Student/iAttend.Student/iAttend.Student/iAttend.Student/Views/TeacherLandingPage.xaml
+++ b/Student/iAttend.Student/iAttend.Student/iAttend.Student/Views/TeacherLandingPage.xaml
@@ -3,69 +3,127 @@
     x:Class="iAttend.Student.Views.TeacherLandingPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:fa="clr-namespace:iAttend.Student.Helpers"
     xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
+    Title="Subject List"
     prism:ViewModelLocator.AutowireViewModel="True"
-    NavigationPage.HasNavigationBar="False">
-    <ListView
-        x:Name="list"
-        HasUnevenRows="True"
-        ItemsSource="{Binding Subjects}"
-        SeparatorVisibility="None">
-        <ListView.ItemTemplate>
-            <DataTemplate>
-                <ViewCell>
-                    <Frame Margin="5,10">
-                        <Frame.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding BindingContext.ViewStudentAttendanceCommand, Source={x:Reference list}}" CommandParameter="{Binding .}" />
-                        </Frame.GestureRecognizers>
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <Label>
-                                <Label.FormattedText>
-                                    <FormattedString>
-                                        <Span Text="{Binding StudentCount}" />
-                                        <Span Text=" Student(s)" />
-                                    </FormattedString>
-                                </Label.FormattedText>
-                            </Label>
-                            <Label
-                                Grid.Row="1"
-                                Style="{x:StaticResource Bigtext}"
-                                Text="{Binding Code}" />
-                            <Label
-                                Grid.Row="2"
-                                Grid.ColumnSpan="2"
-                                Text="{Binding Name}" />
+    NavigationPage.HasNavigationBar="True">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem
+            Command="{Binding LogoutCommand}"
+            Order="Secondary"
+            Text="Sign out" />
+    </ContentPage.ToolbarItems>
+    <StackLayout>
+        <Grid
+            Padding="15"
+            BackgroundColor="#FFFF7C"
+            IsVisible="{Binding HasActiveSession}"
+            RowSpacing="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Label Style="{x:StaticResource HeaderText}" Text="Active Attendance : " />
+            <Label
+                Grid.Row="1"
+                Style="{x:StaticResource Bigtext}"
+                Text="{Binding ActiveTeacherSubject.Code}" />
 
-                            <Label
-                                Grid.Row="0"
-                                Grid.Column="1"
-                                HorizontalOptions="End">
-                                <Label.FormattedText>
-                                    <FormattedString>
-                                        <Span Text="{Binding DayOfWeek}" />
-                                        <Span Text=" | " />
-                                        <Span Text="{Binding Time}" />
-                                    </FormattedString>
-                                </Label.FormattedText>
-                            </Label>
-                            <Label
-                                Grid.Row="1"
-                                Grid.Column="1"
-                                HorizontalOptions="End"
-                                Text="{Binding Room}" />
-                        </Grid>
-                    </Frame>
-                </ViewCell>
-            </DataTemplate>
-        </ListView.ItemTemplate>
-    </ListView>
+            <Label Grid.Row="2" Style="{x:StaticResource subTextMed}">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="{Binding ActiveTeacherSubject.Room}" />
+                        <Span Text=" | " />
+                        <Span Text="{Binding ActiveTeacherSubject.Time}" />
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+
+            <Button
+                Grid.Row="0"
+                Grid.RowSpan="3"
+                Grid.Column="1"
+                Margin="0,10"
+                BackgroundColor="Red"
+                Command="{Binding StopAttendanceSession}"
+                HeightRequest="40"
+                Text="STOP"
+                TextColor="White"
+                VerticalOptions="Center" />
+
+        </Grid>
+        <ListView
+            x:Name="list"
+            HasUnevenRows="True"
+            IsPullToRefreshEnabled="True"
+            IsRefreshing="{Binding IsBusy}"
+            ItemsSource="{Binding Subjects}"
+            RefreshCommand="{Binding RefreshCommand}"
+            SeparatorVisibility="None">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Frame Margin="5,10">
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding BindingContext.ViewStudentAttendanceCommand, Source={x:Reference list}}" CommandParameter="{Binding .}" />
+                            </Frame.GestureRecognizers>
+                            <Grid RowSpacing="0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+                                <Label>
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <Span Text="{Binding StudentCount}" />
+                                            <Span Text=" Student(s)" />
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                                </Label>
+                                <Label
+                                    Grid.Row="1"
+                                    Style="{x:StaticResource Bigtext}"
+                                    Text="{Binding Code}" />
+                                <Label
+                                    Grid.Row="2"
+                                    Grid.ColumnSpan="2"
+                                    Text="{Binding Name}" />
+
+                                <Label
+                                    Grid.Row="0"
+                                    Grid.Column="1"
+                                    HorizontalOptions="End">
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <Span Text="{Binding DayOfWeek}" />
+                                            <Span Text=" | " />
+                                            <Span Text="{Binding Time}" />
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                                </Label>
+                                <Label
+                                    Grid.Row="1"
+                                    Grid.Column="1"
+                                    HorizontalOptions="End"
+                                    Text="{Binding Room}" />
+                            </Grid>
+                        </Frame>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+    </StackLayout>
+
 </ContentPage>
