--- a/Student/iAttend.Student/iAttend.Student/iAttend.Student/Views/SubjectStudentsPage.xaml
+++ b/Student/iAttend.Student/iAttend.Student/iAttend.Student/Views/SubjectStudentsPage.xaml
@@ -92,28 +92,44 @@
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
                                 <Label
                                     Grid.Row="0"
-                                    Grid.ColumnSpan="3"
+                                    Grid.ColumnSpan="2"
                                     Style="{x:StaticResource Bigtext}"
                                     Text="{Binding Code}"
                                     VerticalOptions="End" />
-
+                                <Label Grid.Row="1" Text="{Binding DayOfWeek}" />
                                 <Label
-                                    Grid.Row="1"
-                                    Grid.ColumnSpan="3"
-                                    Style="{x:StaticResource subText}">
+                                    Grid.Row="2"
+                                    Grid.ColumnSpan="5"
+                                    Style="{x:StaticResource subTextMed}">
                                     <Label.FormattedText>
                                         <FormattedString>
-                                            <Span Text="{Binding DayOfWeek}" />
-                                            <Span Text=" | " />
                                             <Span Text="{Binding Time}" />
                                             <Span Text=" | " />
                                             <Span Text="{Binding Room}" />
                                         </FormattedString>
                                     </Label.FormattedText>
                                 </Label>
+
+                                <!--  DROPPED  -->
+                                <Label
+                                    Grid.Row="0"
+                                    Grid.Column="4"
+                                    FontSize="30"
+                                    HorizontalTextAlignment="End"
+                                    Style="{x:StaticResource Bigtext}"
+                                    Text="{Binding BindingContext.DroppedCount, Source={x:Reference subjects}}"
+                                    TextColor="{x:StaticResource default}" />
+                                <Label
+                                    Grid.Row="1"
+                                    Grid.Column="4"
+                                    Style="{x:StaticResource RegularTextSmall}"
+                                    Text="Dropped"
+                                    TextColor="{x:StaticResource default}" />
+
                                 <!--  PRESENT  -->
                                 <Label
                                     Grid.Row="0"
@@ -126,7 +142,7 @@
                                 <Label
                                     Grid.Row="1"
                                     Grid.Column="2"
-                                    Style="{x:StaticResource RegularText}"
+                                    Style="{x:StaticResource RegularTextSmall}"
                                     Text="Present"
                                     TextColor="{x:StaticResource success}" />
 
@@ -143,14 +159,14 @@
                                 <Label
                                     Grid.Row="1"
                                     Grid.Column="3"
-                                    Style="{x:StaticResource RegularText}"
+                                    Style="{x:StaticResource RegularTextSmall}"
                                     Text="Absent"
                                     TextColor="{x:StaticResource danger}" />
 
                                 <!--  BOTTOM  -->
                                 <BoxView
                                     Grid.Row="2"
-                                    Grid.ColumnSpan="4"
+                                    Grid.ColumnSpan="5"
                                     Margin="-15,30,-15,10"
                                     BackgroundColor="{x:StaticResource greyD}"
                                     HeightRequest="1" />
@@ -168,13 +184,14 @@
                                 <renderer:DatePickerWithBorder
                                     Grid.Row="3"
                                     Grid.Column="1"
+                                    Grid.ColumnSpan="2"
                                     Date="{Binding BindingContext.SelectedDate, Source={x:Reference subjects}}"
                                     FontSize="Large"
                                     TextColor="{x:StaticResource mainColor}" />
 
                                 <Button
                                     Grid.Row="3"
-                                    Grid.Column="2"
+                                    Grid.Column="3"
                                     Grid.ColumnSpan="2"
                                     Margin="0,10"
                                     BackgroundColor="{Binding BindingContext.AttendanceSessionStarted, Source={x:Reference subjects}, Converter={x:StaticResource isActive}}"
@@ -188,7 +205,7 @@
 
                                 <Button
                                     Grid.Row="3"
-                                    Grid.Column="3"
+                                    Grid.Column="4"
                                     BackgroundColor="Transparent"
                                     Command="{Binding BindingContext.ResetCommand, Source={x:Reference subjects}}"
                                     HorizontalOptions="End"
