--- a/Student/iAttend.Student/iAttend.Student/iAttend.Student/Views/TeacherLandingPage.xaml
+++ b/Student/iAttend.Student/iAttend.Student/iAttend.Student/Views/TeacherLandingPage.xaml
@@ -13,6 +13,7 @@
             Command="{Binding LogoutCommand}"
             Order="Secondary"
             Text="Sign out" />
+        <ToolbarItem Command="{Binding AddCommand}" Text="Add" />
     </ContentPage.ToolbarItems>
     <StackLayout>
         <Frame
